--- a/scss/content/_header.scss
+++ b/scss/content/_header.scss
@@ -228,7 +228,7 @@
             };
 
             @media screen and (min-width:768px){
-                max-width: 30em;
+                max-width: 14em;
             };
 
             @media screen and (min-width: map-get($map: $breakpoints, $key:lg )){
