--- a/scss/content/_productNav.scss
+++ b/scss/content/_productNav.scss
@@ -22,10 +22,11 @@ $productNav-bg: #333645;
     a{
         padding: 1em 0;
         display: block;
+        letter-spacing: .04rem;
     };
     i {
         font-size: 1.12em;
-        margin-bottom: .5em;
+        margin-bottom: .3em;
     };
     h6{
         font-size: .65em;
