--- a/scss/content/_products.scss
+++ b/scss/content/_products.scss
@@ -40,7 +40,7 @@
     .spreader{
         flex-grow: 1;
         width: 10px;
-        background: red;
+        //background: red;
     }
 
     .iContainer{
